[gd_scene load_steps=2 format=3 uid="uid://cqrdp11o66gnw"]

[ext_resource type="Script" path="res://menus/game_menu.gd" id="1_wqgw1"]

[node name="game_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqgw1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 84
text = "00 : 00 : 00"
horizontal_alignment = 1

[node name="High_score" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.940678
anchor_right = 1.0
anchor_bottom = 1.30508
offset_top = -0.000556946
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 29
text = "High Score: 00 : 00 : 00"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="dificulty" type="Label" parent="Score/High_score"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.381944
anchor_top = 1.34885
anchor_right = 0.618056
anchor_bottom = 2.39536
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Main menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115451
anchor_top = 0.591049
anchor_right = 0.460069
anchor_bottom = 0.753086
offset_top = -8.41397
offset_bottom = -8.41397
scale = Vector2(1, 1.01121)
theme_override_font_sizes/font_size = 71
text = "Main menu"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Play again" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.538194
anchor_top = 0.58179
anchor_right = 0.846354
anchor_bottom = 0.743827
offset_top = -2.41403
offset_bottom = -2.41403
scale = Vector2(1, 1.01121)
theme_override_font_sizes/font_size = 71
text = "Play again"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Play again" to="." method="_on_play_again_pressed"]
